--- a/admin-xyz-123.html
+++ b/admin-xyz-123.html
@@ -1,28 +1,11 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Gerenciar Produtos</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
-  <style>
-    body { font-family: 'Roboto', Arial, sans-serif; padding: 20px; background-color: #f5f5f5; }
-    h1, h3 { text-align: center; color: #333; }
-    form { max-width: 500px; margin: auto; display: flex; flex-direction: column; gap: 10px; background: white; padding: 20px; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
-    input, select, textarea, button { padding: 10px; border: 1px solid #ddd; border-radius: 4px; font-size: 16px; }
-    textarea { resize: vertical; min-height: 100px; }
-    button { background-color: #ff6200; color: white; border: none; cursor: pointer; font-weight: bold; }
-    button:hover { background-color: #e55a00; }
-    #mensagem { margin-top: 10px; color: green; text-align: center; }
-    #erro { margin-top: 10px; color: red; text-align: center; }
-    #produtos-cadastrados { margin: 20px auto; max-width: 900px; background: white; padding: 20px; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
-    #produtos-cadastrados table { width: 100%; border-collapse: collapse; }
-    #produtos-cadastrados th, #produtos-cadastrados td { padding: 10px; border: 1px solid #ddd; text-align: left; }
-    #produtos-cadastrados th { background-color: #f9f9f9; }
-    #produtos-cadastrados button.excluir { background-color: #dc3545; padding: 5px 10px; font-size: 14px; border: none; color: white; border-radius: 4px; cursor: pointer; }
-    #produtos-cadastrados button.excluir:hover { background-color: #c82333; }
-    .thumbnail { width: 50px; height: 50px; object-fit: cover; margin: 2px; cursor: pointer; border-radius: 4px; }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>Adicionar Produto</h1>
@@ -85,25 +68,37 @@
     </table>
   </div>
 
-  <script>
-    const API_URL = 'https://centrodecompra-backend.onrender.com';
+  <script type="module" src="firebase.js"></script>
+  <script type="module">
+    import { collection, addDoc, getDocs, deleteDoc, doc } from 'firebase/firestore';
+    import { ref, uploadBytes, getDownloadURL } from 'firebase/storage';
+
+    const db = window.firebaseDb;
+    const storage = window.firebaseStorage;
+
+    const formProduto = document.getElementById('form-produto');
+    const mensagem = document.getElementById('mensagem');
+    const erro = document.getElementById('erro');
+    const listaProdutos = document.getElementById('lista-produtos');
 
     async function carregarProdutos() {
       try {
-        const res = await fetch(`${API_URL}/api/produtos`);
-        if (!res.ok) throw new Error('Falha ao buscar produtos');
-        const produtos = await res.json();
+        listaProdutos.innerHTML = '<tr><td colspan="8" style="text-align:center;">Carregando produtos...</td></tr>';
+        const querySnapshot = await getDocs(collection(db, 'produtos'));
+        const produtos = [];
+        querySnapshot.forEach((doc) => {
+          produtos.push({ id: doc.id, ...doc.data() });
+        });
         preencherTabela(produtos);
       } catch (err) {
-        document.getElementById('lista-produtos').innerHTML = `<tr><td colspan="8" style="color:red;text-align:center;">${err.message}</td></tr>`;
+        listaProdutos.innerHTML = `<tr><td colspan="8" style="color:red;text-align:center;">Erro ao carregar produtos: ${err.message}</td></tr>`;
       }
     }
 
     function preencherTabela(produtos) {
-      const tbody = document.getElementById('lista-produtos');
-      tbody.innerHTML = '';
+      listaProdutos.innerHTML = '';
       if (produtos.length === 0) {
-        tbody.innerHTML = '<tr><td colspan="8" style="text-align:center;">Nenhum produto cadastrado.</td></tr>';
+        listaProdutos.innerHTML = '<tr><td colspan="8" style="text-align:center;">Nenhum produto cadastrado.</td></tr>';
         return;
       }
       produtos.forEach((produto) => {
@@ -113,7 +108,7 @@
           ? imagens.map((img, i) => `<img src="${img}" class="thumbnail" alt="Imagem ${i + 1}" />`).join('')
           : 'Sem imagens';
 
-        tbody.innerHTML += `
+        listaProdutos.innerHTML += `
           <tr>
             <td>${produto.nome}</td>
             <td>${produto.descricao || 'N/A'}</td>
@@ -122,7 +117,7 @@
             <td><a href="${produto.link}" target="_blank" rel="noopener noreferrer">Link</a></td>
             <td>${precoFormatado}</td>
             <td>${miniaturas}</td>
-            <td><button class="excluir" onclick="excluirProduto('${produto._id}')">Excluir</button></td>
+            <td><button class="excluir" onclick="excluirProduto('${produto.id}')">Excluir</button></td>
           </tr>
         `;
       });
@@ -131,37 +126,53 @@
     async function excluirProduto(id) {
       if (!confirm('Confirma a exclusão deste produto?')) return;
       try {
-        const res = await fetch(`${API_URL}/api/produtos/${id}`, { method: 'DELETE' });
-        if (!res.ok) throw new Error('Erro ao excluir produto');
+        await deleteDoc(doc(db, 'produtos', id));
         alert('Produto excluído com sucesso');
         carregarProdutos();
       } catch (err) {
-        alert(err.message);
+        alert(`Erro ao excluir produto: ${err.message}`);
       }
     }
 
-    document.getElementById('form-produto').addEventListener('submit', async (event) => {
-      event.preventDefault();
-      const form = event.target;
-      const formData = new FormData(form);
+    async function uploadImagens(files) {
+      const imageUrls = [];
+      for (const file of files) {
+        const storageRef = ref(storage, `imagens/${Date.now()}_${file.name}`);
+        await uploadBytes(storageRef, file);
+        const url = await getDownloadURL(storageRef);
+        imageUrls.push(url);
+      }
+      return imageUrls;
+    }
 
-      document.getElementById('mensagem').textContent = '';
-      document.getElementById('erro').textContent = '';
+    formProduto.addEventListener('submit', async (event) => {
+      event.preventDefault();
+      const formData = new FormData(event.target);
+      mensagem.textContent = '';
+      erro.textContent = '';
 
       try {
-        const res = await fetch(`${API_URL}/api/produtos`, {
-          method: 'POST',
-          body: formData
-        });
-        if (!res.ok) {
-          const erroJson = await res.json().catch(() => null);
-          throw new Error(erroJson?.error || 'Erro ao adicionar produto');
-        }
-        document.getElementById('mensagem').textContent = 'Produto adicionado com sucesso!';
-        form.reset();
+        const imagens = formData.getAll('imagens');
+        const imageUrls = await uploadImagens(imagens);
+
+        const produto = {
+          nome: formData.get('nome'),
+          descricao: formData.get('descricao'),
+          categoria: formData.get('categoria'),
+          loja: formData.get('loja'),
+          link: formData.get('link'),
+          preco: parseFloat(formData.get('preco')),
+          imagens: imageUrls,
+          criadoEm: new Date().toISOString()
+        };
+
+        await addDoc(collection(db, 'produtos'), produto);
+
+        mensagem.textContent = 'Produto adicionado com sucesso!';
+        formProduto.reset();
         carregarProdutos();
       } catch (error) {
-        document.getElementById('erro').textContent = error.message;
+        erro.textContent = `Erro ao adicionar produto: ${error.message}`;
       }
     });
 
@@ -169,4 +180,3 @@
   </script>
 </body>
 </html>
-
